--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,9 @@
 .Rhistory
 .RData
 .Ruserdata
+Dataset1-Media-Example-EDGES.csv
+Dataset1-Media-Example-NODES.csv
+Dataset2-Media-User-Example-EDGES.csv
+Dataset2-Media-User-Example-NODES.csv
+igraph-tutorial-ja.Rproj
+
