Add NetSciX_2016_Workshop.pdf to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -7,4 +7,4 @@ Dataset1-Media-Example-NODES.csv
 Dataset2-Media-User-Example-EDGES.csv
 Dataset2-Media-User-Example-NODES.csv
 igraph-tutorial-ja.Rproj
-
+NetSciX_2016_Workshop.pdf
