--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@ Dataset2-Media-User-Example-EDGES.csv
 Dataset2-Media-User-Example-NODES.csv
 igraph-tutorial-ja.Rproj
 NetSciX_2016_Workshop.pdf
+NetSciX_2016_Workshop_ja.html
+
